# xbid-ai-escrow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
contracts/escrow/: Cargo.toml  Makefile
contracts/escrow/src/: emission.rs  escrow.rs  lib.rs  storage.rs  test.rs  types.rs
