[package]
name = "escrow"
version = "1.0.0"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <hello@kyungj.in>"]
description = "XBID escrow contract implementing a deterministic, frequency-independent, permissionless emission schedule."
repository = "https://github.com/xbid-ai/xbid-ai-escrow"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
